# learnsomething

./: CMakeLists.txt  README.md  Taskfile.yml  prime.py  pyproject.toml
src/: hackathonbot.cpp  hackathonbot.h  improved.py  interface.py  main.cpp  pricingutil.cpp  pricingutil.h
tst/: test_pricingutil.cpp  test_traderisktracker.cpp
