[tool.poetry]
name = "learnsomething"
version = "0.1.0"
description = ""
authors = ["Jason <jasonlu2025@u.northwestern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pybind11 = "^2.11.1"
cppimport = "^22.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
